<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Minutis</string>
  <string name="app_connected">Connecté</string>
  <string name="app_disconnected">Déconnecté</string>
  <string name="settings_name">Paramètres</string>
  <string name="all_connection">Connexion</string>
  <string name="all_write_message">Écrire un message</string>
  <string name="all_yes">Oui</string>
  <string name="all_validate">Valider</string>
  <string name="all_send">Envoyer</string>
  <string name="all_cancel">Annuler</string>
  <string name="all_undefined">Non défini</string>
  <string name="connect_is_connected">Vous êtes connecté au serveur</string>
  <string name="connect_is_not_connected">"Vous n'êtes pas connecté au serveur"</string>
  <string name="connect_connect">Se connecter</string>
  <string name="connect_disconnect">Se déconnecter</string>
  <string name="state_undefined">Statut non défini</string>
  <string name="state_starting">En départ</string>
  <string name="state_on_site">Sur place</string>
  <string name="state_evacuating">En évacuation</string>
  <string name="state_ending">En final</string>
  <string name="state_leaving_hospital">"Quitte l'hôpital"</string>
  <string name="state_available">Disponible</string>
  <string name="state_busy">Indisponible</string>
  <string name="state_home">Rentré</string>
  <string name="main_messages">Messages</string>
  <string name="no_message">Aucun message reçu</string>
  <plurals name="new_message">
    <item quantity="one">%d message reçu</item>
    <item quantity="other">%d messages reçus</item>
  </plurals>
  <string name="main_select_state">Choisissez votre statut</string>
  <string name="no_navigation_app">Aucune application de géolocalisation trouvée</string>
  <string name="dialog_phone_number_title">Veuillez entrer votre numéro de téléphone</string>
  <string name="dialog_write_message_title">Veuillez entrer votre message</string>
  <string name="dialog_enable_gps_title">Voulez-vous allumer le GPS ?</string>
  <string name="dialog_enable_gps_message">"L'activation se fait dans l'application Paramètres.\nEn cliquant sur oui, vous serez directement sur la bonne fenêtre pour allumer le GPS"</string>
  <string name="dialog_disable_gps_title">Voulez-vous éteindre le GPS ?</string>
  <string name="dialog_disable_gps_message">"L'extinction se fait dans l'application Paramètres.\nEn cliquant sur oui, vous serez directement sur la bonne fenêtre pour éteindre le GPS"</string>
  <string name="pref_phone_number">Numéro de téléphone</string>
  <string name="pref_server_address">Adresse du serveur</string>
  <string name="pref_server_address_malformed">"L'adresse entrée est invalide"</string>
  <string name="pref_default_server_address">Adresse du serveur par défaut</string>
  <string name="pref_reset_server_address">"Réinitialiser l'adresse du serveur"</string>
  <string name="pref_server_address_reset">"Adresse réinitialisée"</string>
  <string name="pref_privacy">Confidentialité</string>
  <string name="pref_gps_title">Activer le GPS</string>
  <string name="pref_gps_summary">Envoyer la position du téléphone au serveur</string>
  <string name="pref_notification">Notification</string>
  <string name="pref_notif_buzzer_summary">"Vibrer à la réception d'un message"</string>
  <string name="pref_notif_buzzer_title">Vibreur</string>
  <string name="pref_notif_sound_summary">"Émettre un son à la réception d'un message"</string>
  <string name="pref_notif_sound_title">Son</string>
  <string name="error_cannot_connect">Impossible de se connecter</string>
  <string name="error_cannot_connect_without_phone">Impossible de se connecter sans numéro de téléphone</string>
  <string    name="error_connect_first_status">Connectez-vous pour changer de statut</string>
  <string name="error_connect_first_message">Connectez-vous pour envoyer un message</string>

  <string  name="crash_dialog_text">"Minutis s'est arrêtée suite à une erreur imprévue.\n\nAidez-nous à corriger cette erreur en acceptant d'envoyer un rapport par email.\n\nAucune donnée personnelle ne sera transmise."</string>

</resources>
