<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_notification" >
	<SwitchPreference
		android:key="notif_buzzer"
		android:summary="@string/pref_notif_buzzer_summary"
		android:title="@string/pref_notif_buzzer_title"
		android:defaultValue="true" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_privacy" >
	<SwitchPreference
		android:key="enable_gps"
		android:summary="@string/pref_gps_summary"
		android:title="@string/pref_gps_title"
		android:defaultValue="true" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/all_connection" >
	<EditTextPreference
		android:key="phone_number"
		android:title="@string/pref_phone_number"
		android:inputType="phone" />
	<EditTextPreference
		android:key="server_address"
		android:title="@string/pref_server_address"
		android:inputType="textUri" />
	<Preference
		android:key="reset_server_address"
		android:title="@string/pref_reset_server_address" />
  </PreferenceCategory>
</PreferenceScreen>
